--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,7 +11,7 @@ binding = "ASSETS"
 [[d1_databases]]
 binding = "DB"
 database_name = "wxchat"
-database_id = "b58dde57-d777-459f-a6b3-ae4de9c16368"
+database_id = ""
 
 # R2 存储桶绑定
 [[r2_buckets]]
@@ -21,9 +21,9 @@ bucket_name = "wxchat"
 # 环境变量配置（用于鉴权）
 [vars]
 # 访问密码（明文，直接在Cloudflare Workers控制台配置）
-ACCESS_PASSWORD = "wxchat2024"
+ACCESS_PASSWORD = ""
 # JWT密钥（用于会话管理）
-JWT_SECRET = "your-super-secret-jwt-key-change-this-in-production"
+JWT_SECRET = ""
 # 会话过期时间（小时）
 SESSION_EXPIRE_HOURS = "24"
 # 最大登录尝试次数
